# memorandom

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  README.md  TODO.md
data/: file-formats.mr  languages.mr  periodic-table.mr  tolkien.mr
doc/: Development Guide.md  Format Specification.md
src/: cursor.rs  lib.rs  memo.rs  node.rs  parser.rs  value.rs
