[package]
name = "memorandom"
version = "0.1.0"
edition = "2021"
authors = ["nacl42 <code@nacl42.de>"]

repository = "https://github.com/nacl42/memorandom"

default-bin = "mr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.9.0"
